--- a/public/locales/he/translation.json
+++ b/public/locales/he/translation.json
@@ -4,7 +4,7 @@
     "pressure": "לַחַץ",
     "feels_like": "מרגיש כמו:",
     "wind-unit": "גברת",
-    "pressure-utin": "אבא",
+    "pressure-unit": "אבא",
     "search-placeholder": "חפש עיר...",
     "search-button": "לְהוֹסִיף",
     "error-message": "עיר כזו לא קיימת. בדוק שהקלט נכון"
